crates/noxu-persist-derive/tests/ui/fail_invalid_relate.stderr
error: invalid `relate = NotARealVariant`; allowed values: OneToOne, ManyToOne, OneToMany, ManyToMany
 --> tests/ui/fail_invalid_relate.rs:7:5
  |
7 |     #[secondary_key(name = "x", relate = NotARealVariant)]
  |     ^
